--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         </li>
 
         <li class="list_inline">
-          <a class="link" href="#">
+          <a class="link" href="/myblogs/no.html">
             Linkedin
           </a>
         </li>
 
         <li class="list_inline">
-          <a class="link" href="#">
+          <a class="link" href="/myblogs/no.html">
             Twitter
           </a>
         </li>
