--- a/myblogs/chalk.html
+++ b/myblogs/chalk.html
@@ -26,24 +26,17 @@
             used for styling the format of text and it allows us to customize
             our own themes in our <strong>nodeJs</strong> projects. We can
             customize the color of the command_line output using Chalk.
-            When i was making my quiz projects using javascript , Chalk NPM
-            library was really useful to me as i set the color of message for the
-            right answer to green and red for the wrong one. This is how using <strong>Chalk NPM library</strong>
-            in my projects made them look good and attractive.
         </p>
 
         <h2>importing <strong>Chalk</strong> :</h2>
 
         <p>
-            If we want to use <strong>chalk</strong> in our Javascript projects ,
-            we need to import Chalk npm library first by using the following
-            code snippet.
+            Step1 : import the library
             <br>
             <br> const chalk = require('chalk');
             <pre></pre>
 
-            After importing the <strong>Chalk NPM library</strong> , we need to
-            use it in our projects to make them look good and attractive.
+            Step 2: using it within our code.
         </p>
 
         <h2> Using <strong>Chalk</strong> :</h2>
@@ -51,9 +44,7 @@
         <p>
             console.log(chalk.color_name("Hello,world!"));
             <pre></pre>
-            We can also add more styles to our customized text , like we can 
-            make the text bold by using .bold before the color name is mentioned and we will
-            get a bold and coloured text. Here is the code snippet.
+            We can also add more styles to our customized text, like another example is shown below.
             <pre></pre>
             console.log(chalk.bold.color_name("Hello,world!"));
 
